--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" type="x-icon" href="ash.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crazy Monster</title>
     <link rel="stylesheet" href="index.css">
