--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 
         <hr/>
         <div>
+            <p>
+                <span>Low Space device</span>
+                <span style="color:red"><a href="https://gt-mr-sharing.s3.ap-southeast-1.amazonaws.com/CM/CrazyMonster202532.apk">32bit download</a></span>
+            </p>
             <p>Please remove any previous installations before playing. If you run into any problems, let us know right away.</p>
             <p>
                 <span>Contact us</span>
