--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <hr/>
 
         <div class="install_box">
-            <button class="install_box_btn">Install</button>
+            <button class="install_box_btn">Download</button>
             <p class="install_box_content"></p>
                 <span class="install_box_text"></span>
             </p>
