--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             <h3 class="carousel_title">View</h3>
             <div>
                 <div class="swiper-container">  
-                    <div class="swiper-wrapper">  
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="0001.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="0002.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="0003.jpg" alt=""></div>
                         <div class="swiper-slide"><img src="000.jpg" alt=""></div>  
                         <div class="swiper-slide"><img src="001.jpg" alt=""></div>  
                         <div class="swiper-slide"><img src="002.jpg" alt=""></div>  
